--- a/Criar_Resumo.ipynb
+++ b/Criar_Resumo.ipynb
@@ -9,7 +9,7 @@
       "collapsed_sections": [
         "KzJHIHutbnje"
       ],
-      "authorship_tag": "ABX9TyPasZgNN0OBEm7kTfJ81gAk",
+      "authorship_tag": "ABX9TyPstcfjKS3tRpeSAk56tgLf",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -255,9 +255,12 @@
         "\n",
         "    self.__cols = {\n",
         "      \"PROCESSO\": \"PROCESSO\",\n",
+        "      \"RECORRENTE\": \"RECORRENTE\",\n",
+        "      \"RECORRIDO\": \"RECORRIDO\",\n",
         "      \"OBJETO\": \"OBJETO\",\n",
         "      \"ALEGACOES\": \"ALEGACOES\",\n",
         "      \"FUNDAMENTACAO\": \"FUNDAMENTACAO\",\n",
+        "      \"DETALHE_DISPOSITIVO\": \"DETALHE_DISPOSITIVO\",\n",
         "      \"DISPOSITIVO\": \"DISPOSITIVO\",\n",
         "      \"OBSERVACOES\": \"OBSERVACOES\",\n",
         "      \"STATUS_JULGAMENTO\": \"STATUS_JULGAMENTO\",\n",
@@ -312,9 +315,9 @@
         "    return f'{link}?web=1'\n",
         "\n",
         "  # obtem grupo do voto (a partir das três pastas acima)\n",
-        "  # a partir de /pasta1/pasta2/pasta3/arquivo, retorna pasta1?pasta2?pasta3 \n",
+        "  # a partir de /pasta/arquivo, retorna pasta \n",
         "  def __obter_grupo(self, s):\n",
-        "    pattern = re.compile('.*\\/([^\\/]+\\/[^\\/]+\\/[^\\/]+)\\/')\n",
+        "    pattern = re.compile('.*\\/([^\\/]+)\\/')\n",
         "    match = pattern.search(s)\n",
         "    if not match:\n",
         "      return ''\n",
@@ -409,12 +412,12 @@
         "\n",
         "    for index, row in df_pastas.iterrows():\n",
         "\n",
-        "      partes = row['CAMINHO'].split('/')\n",
-        "      if len(partes) < 3:\n",
+        "      partes = row['CAMINHO'].split('_', 1)\n",
+        "      if len(partes) < 2:\n",
         "        continue\n",
         "\n",
-        "      grupo = f'{partes[0]}_{partes[1]}'\n",
-        "      titulo = partes[2]\n",
+        "      grupo = partes[0]\n",
+        "      titulo = partes[1]\n",
         "\n",
         "      if not grupo in dic:\n",
         "        dic[grupo] = {}\n",
@@ -426,7 +429,7 @@
         "      item['situacao'] = re.sub('\\D', '', row['SITUACAO_PAUTA'])\n",
         "      item['tipoVoto'] = re.sub('\\D', '', row['TIPO_VOTO'])\n",
         "      item['observacoes'] = row['OBSERVACOES']\n",
-        "      item['dispositivo'] = row['DISPOSITIVO']\n",
+        "      item['dispositivo'] = row['DISPOSITIVO'] + ' ' + row['DETALHE_DISPOSITIVO'] \n",
         "      link = self.__criar_link_para_browser(row['LINK'])\n",
         "      item['link'] = link\n",
         "      item['linkBtn'] = re.sub('\\{\\{link\\}\\}', link, link_template) \n",
@@ -634,10 +637,17 @@
         "\n",
         "      # Extrai o valor das colunas customizadas do Sharepoint\n",
         "      custom = [\n",
-        "                'PROCESSO', 'OBJETO', 'ALEGACOES', 'FUNDAMENTACAO', \n",
-        "                'DISPOSITIVO', 'OBSERVACOES', 'STATUS_JULGAMENTO', \n",
-        "                'SITUACAO_PAUTA', 'TIPO_VOTO'\n",
-        "                ]\n",
+        "        'PROCESSO', \n",
+        "        'OBJETO', \n",
+        "        'ALEGACOES', \n",
+        "        'FUNDAMENTACAO', \n",
+        "        'DISPOSITIVO', \n",
+        "        'DETALHE_DISPOSITIVO', \n",
+        "        'OBSERVACOES', \n",
+        "        'STATUS_JULGAMENTO', \n",
+        "        'SITUACAO_PAUTA', \n",
+        "        'TIPO_VOTO'\n",
+        "      ]\n",
         "      for col_name in custom:\n",
         "        if col_name not in df.columns:\n",
         "          df[col_name] = pd.Series()\n",
@@ -654,7 +664,7 @@
         "      if len(partes) > 1:\n",
         "        self.__complemento = partes[1]\n",
         "      else:\n",
-        "        self.__complemento = 'Genérico'\n",
+        "        self.__complemento = 'Normal'\n",
         "\n",
         "      # Separa pastas e arquivos\n",
         "      grouped = df.groupby(df['IS_FOLDER'])\n",
@@ -673,20 +683,21 @@
         "      # e identifica se há nomes de arquivos inválidos\n",
         "      df_arquivos['PROCESSO'] = df_arquivos['NAME'].apply(self.__extrair_numero_processo)\n",
         "      try:\n",
-        "        errors = df_arquivos.groupby(arquivos['PROCESSO']).get_group('')['NAME'].tolist()\n",
+        "        errors = df_arquivos.groupby(df_arquivos['PROCESSO']).get_group('')['NAME'].tolist()\n",
         "      except:\n",
         "        errors = []\n",
         "\n",
         "      if len(errors) > 0:\n",
         "        errors = '\\n'.join(errors)\n",
         "        mensageria.falha(f'\\n>>>> Os seguintes arquivos têm nome irregular:\\n {errors}')\n",
+        "        os.remove(nome_arquivo)\n",
         "        return\n",
         "\n",
         "      # cria coluna com a localização dos processos\n",
         "      # e identifica se há localizações inválidas\n",
         "      df_arquivos['CAMINHO'] = df_arquivos['PATH'].apply(self.__obter_grupo)\n",
-        "      df_arquivos['GRUPO'] = df_arquivos['CAMINHO'].apply(lambda x: x.split('/')[0] + '_' + x.split('/')[1])\n",
-        "      df_arquivos['TITULO'] = df_arquivos['CAMINHO'].apply(lambda x: x.split('/')[2])\n",
+        "      df_arquivos['GRUPO'] = df_arquivos['CAMINHO'].apply(lambda x: x.split('_', 1)[0])\n",
+        "      df_arquivos['TITULO'] = df_arquivos['CAMINHO'].apply(lambda x: x.split('_', 1)[1])\n",
         "\n",
         "      try:\n",
         "        errors = df_arquivos.groupby(arquivos['GRUPO']).get_group('')['NAME'].tolist()\n",
@@ -696,6 +707,7 @@
         "      if len(errors) > 0:\n",
         "        errors = '\\n'.join(errors)\n",
         "        mensageria.falha(f'\\n>>>> Os seguintes arquivos têm localização irregular:\\n {errors}')\n",
+        "        os.remove(nome_arquivo)\n",
         "        return\n",
         "\n",
         "      # Converte dados em dicionário\n",
@@ -779,7 +791,7 @@
         "      mensageria.falha('\\n>>>> NÃO HÁ DADOS CARREGADOS')\n",
         "      return\n",
         "    mensageria.sucesso('\\n>>>> DADOS OBTIDOS:')\n",
-        "    mensageria.sucesso(f'Total de processo: {self.__processos}')\n",
+        "    mensageria.sucesso(f'Total de processos: {self.__processos}')\n",
         "    mensageria.sucesso('Grupos:')\n",
         "    for grupo in self.__grupos:\n",
         "      nome = grupo['nome']\n",
